--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" type="text/css" media="screen" href="css/main.css" />
   <link rel="shortcut icon" href="#" type="image/x-icon">
   <title>PIXI Template</title>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.0/gsap.min.js"></script>
 </head>
 <body class="page-body">
 
